# minisound

./: .gitignore  .gitmodules  Makefile  README.md  analysis_options.yaml  update_pubspecs.py
.github/workflows/: build.yaml  publish.yaml
.nvim/: tasks.json
minisound/: CHANGELOG.md  README.md  pubspec.yaml
minisound/example/: README.md  analysis_options.yaml  pubspec.yaml
minisound/example/android/app/src/main/: AndroidManifest.xml
minisound/example/assets/: laser_shoot.flac  minisound_ffi
minisound/example/lib/: main.dart
minisound/example/lib/widgets/: generation_example.dart  generator_example.dart  playback_example.dart  recorder_example.dart  recording_example.dart  sound_widget.dart
minisound/example/macos/Runner.xcodeproj/: project.pbxproj
minisound/example/web/: index.html
minisound/example/windows/: CMakeLists.txt
minisound/example/windows/flutter/: generated_plugins.cmake
minisound/lib/: engine.dart  engine_flutter.dart  generator.dart  minisound.dart  minisound_flutter.dart  player.dart  player_flutter.dart  rec.dart  recorder.dart  sound.dart
minisound/lib/src/: dummy_file.dart  dummy_io.dart  player_io.dart
minisound/lib/test/: minisound_mock.dart
minisound/test/: minisound_mock.dart  minisound_test.dart
minisound_ffi/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
minisound_ffi/android/: build.gradle  settings.gradle
minisound_ffi/android/src/main/: AndroidManifest.xml
minisound_ffi/ios/: minisound_ffi.podspec
minisound_ffi/ios/Classes/: minisound_ffi.c
minisound_ffi/lib/: ffi_audio_common.dart  ffi_engine.dart  ffi_generator.dart  ffi_rec.dart  ffi_recorder.dart  ffi_sound.dart  minisound_ffi.dart  minisound_ffi_bindings.dart
minisound_ffi/lib/src/: minisound_ffi_bindings.dart
minisound_ffi/linux/: CMakeLists.txt
minisound_ffi/macos/: minisound_ffi.podspec
minisound_ffi/macos/Classes/: minisound_ffi.c
minisound_ffi/src/: .clang-format  CMakeLists.txt  modify_js.cmake  modify_js.cmake.in
minisound_ffi/src/include/: audio_common.h  circular_buffer.h  conviniences.h  engine.h  export.h  generator.h  milo.config.h  minisound.h  record.h  recorder.h  recorder_buffer.h  recording.h  result.h  silence_data_source.h  sound.h  wave.h
minisound_ffi/src/include/recorder/: rec.h  recorder.h  recorder_buffer.h  recording.h
minisound_ffi/src/include/recorder/rec_sink/: encoded_rec_sink.h  rec_sink.h
minisound_ffi/src/include/sound_data/: encoded_sound_data.h  generated_sound_data.h  noise_sound_data.h  pulse_data_source.h  pulse_sound_data.h  pulsewave_data_source.h  recorded_sound_data.h  silence_data_source.h  sound_data.h  waveform_sound_data.h
minisound_ffi/src/src/: audio_common.c  circular_buffer.c  engine.c  generator.c  milo.c  record.c  recorder.c  recorder_buffer.c  recording.c  silence_data_source.c  sound.c  sound_data.c  wave.c
minisound_ffi/src/src/recorder/: rec.c  recorder.c  recorder_buffer.c  recording.c
minisound_ffi/src/src/recorder/rec_sink/: encoded_rec_sink.c
minisound_ffi/src/src/sound_data/: encoded_sound_data.c  generated_sound_data.c  noise_sound_data.c  pulse_data_source.c  pulse_sound_data.c  pulsewave_data_source.c  recorder_sound_data.c  silence_data_source.c  waveform_sound_data.c
minisound_ffi/test_native/: .gitignore  CMakeLists.txt
minisound_ffi/test_native/.cache/clangd/index/: miunte.h.F6AE358C47E35A0A.idx  test.c.F977D40AFF7F3901.idx
minisound_ffi/test_native/src/: test.c
minisound_ffi/windows/: CMakeLists.txt
minisound_platform_interface/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
minisound_platform_interface/lib/: minisound_platform.dart  minisound_platform_interface.dart  platform_audio_common.dart  platform_engine.dart  platform_generator.dart  platform_recorder.dart  platform_sound.dart
minisound_web/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
minisound_web/lib/: minisound_web.dart  web_audio_common.dart  web_engine.dart  web_generator.dart  web_rec.dart  web_recorder.dart  web_sound.dart
minisound_web/lib/bindings/: minisound.dart  minisound_web_bindings.dart
minisound_web/lib/bindings/wasm/: allocator.dart  heap.dart  opaque.dart  pointer.dart  primitive.dart  wasm.dart
minisound_web/lib/js/: CMakeCache.txt  Makefile  cmake_install.cmake  minisound_web.js  minisound_web.loader.js  minisound_web.wasm  modify_js.cmake
minisound_web/lib/js/emscripten/: minisound_web.aw.js  minisound_web.js  minisound_web.wasm
minisound_web/lib/src/: minisound_web_bindings.dart
minisound_web/lib/src/wasm/: allocator.dart  heap.dart  pointer.dart  primitive.dart  wasm.dart
